change hero relative width unit to fix x-overflow

--- a/src/views/Home/components/Hero/Hero.scss
+++ b/src/views/Home/components/Hero/Hero.scss
@@ -11,7 +11,7 @@
     position: relative;
     flex-wrap: nowrap;
     margin: auto;
-    width: 100vw;
+    width: 100%;
     max-width: 175em;
     padding-top: calc(65px + 10vh);
     padding-bottom: calc(65px + 10vh);
